Add modal window in this site, but it's don't work Add style in module components "css" created a new js file and transferred there all third-party scripts related with that pulsating button with its styles

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+
+  <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -20,7 +21,7 @@
     <textarea id='hobbies'>JS, HTML, CSS</textarea>
 
 
-    <script src="index.js" ></script>
+    <script src="script.js" ></script>
 
     <button class="ripple-button">Click me</button>
 
